Avance a musica.js

--- a/Templates/musicaPrueba.html
+++ b/Templates/musicaPrueba.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <script src="../Dynamics/js/musica.js"></script>
     <title>Probar listas</title>
 </head>
 <body>
     <h1>Probando listas de reproducción</h1>
-    <script src="../Dynamics/JS/musica.js"></script>
+   
 </body>
 </html>
