--- a/Statics/palabras.css
+++ b/Statics/palabras.css
@@ -1,8 +1,9 @@
 #contenedor_all{
+    background-color: rgb(168, 127, 235);
     display: row wrap;
-    
+    flex
 
 }
 #contenedorbtn{
-
+    background-color: rgb(168, 127, 235);
 }
