--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -10,9 +10,16 @@
     <h1>Juego de palabras</h1>
     <div id="contenedor_all">
         <div id="contenedorbtn">
-            <button id="contador-btn">Contador</button>
-            <button id="buscador-btn">Buscador</button>
-            <button id="acronimo-btn">Acronimo</button>
+            <div id="btn1">
+                <button id="contador-btn" class="boton">Contador</button>
+            </div>
+            <div id="btn2">
+                <button id="buscador-btn">Buscador</button>
+            </div>
+            <div id="btn3">
+                <button id="acronimo-btn">Acronimo</button>
+            </div>
+            
         </div>
         <div id="contenedor_dinamico">
             <h3 id="encabezado_estatus">Contador</h3>
