--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -10,16 +10,15 @@
     <h1>Juego de palabras</h1>
     <div id="contenedor_all">
         <div id="contenedorbtn">
-            <div id="btn1">
+            <div id="btn1" class="divboton">
                 <button id="contador-btn" class="boton">Contador</button>
             </div>
-            <div id="btn2">
-                <button id="buscador-btn">Buscador</button>
+            <div id="btn2" class="divboton">
+                <button id="buscador-btn" class="boton">Buscador</button>
             </div>
-            <div id="btn3">
-                <button id="acronimo-btn">Acronimo</button>
+            <div id="btn3" class="divboton">
+                <button id="acronimo-btn" class="boton">Acronimo</button>
             </div>
-            
         </div>
         <div id="contenedor_dinamico">
             <h3 id="encabezado_estatus">Contador</h3>
