--- a/Statics/palabras.css
+++ b/Statics/palabras.css
@@ -1,12 +1,34 @@
+*{
+    display: flexbox;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 #contenedor_all{
     display: flex;
     flex: row wrap;
-    
-
 }
 .boton{
     display: block;
+    width: 100px;
+    background-color: rgba(0, 0, 0, 0.308);
+    color: white;
+    border: none;
+    margin-bottom: 10px;
+}
+.divboton{
+    display: block;
 }
 #contenedorbtn{
+    display: flexbox;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
     background-color: rgb(168, 127, 235);
+}
+#contenedor_dinamico{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
