--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -21,9 +21,12 @@
             </div>
         </div>
         <div id="contenedor_dinamico">
-            <h3 id="encabezado_estatus">Contador</h3>
+            <div id="tituloselect">
+                <h3 id="encabezado_estatus">Contador</h3>
+            </div>
+            
             <form id="texto">
-                <label for="texto">Texto</label>
+                <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
             </form>
         </div>
