--- a/Statics/palabras.css
+++ b/Statics/palabras.css
@@ -1,19 +1,33 @@
 *{
-    display: flexbox;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
+    background-color: rgb(244, 251, 255);
+    color:rgb(77, 86, 100);
 }
 #contenedor_all{
     display: flex;
     flex: row wrap;
+    width: 100%;
+    height: 1000px;
 }
 .boton{
     display: block;
     width: 100px;
     background-color: rgba(0, 0, 0, 0.308);
-    color: white;
+    color: rgba(255, 255, 255, 0.596);
     border: none;
+    border-radius: 5px;
     margin-bottom: 10px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+.boton:hover{
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.795);
+    color: rgba(0, 0, 0, 0.589);
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.336);
 }
 .divboton{
     display: block;
@@ -23,12 +37,27 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    background-color: rgb(168, 127, 235);
+    background-color: rgb(133, 146, 170);
 }
 #contenedor_dinamico{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: auto;
+    justify-content: flex-start;
+    align-items:center;
+    flex-direction: column;
     text-align: center;
 }
+#tituloselect{
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: center;
+}
+#encabezado_estatus{
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
