--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -20,11 +20,28 @@
                 <button id="acronimo-btn" class="boton">Acronimo</button>
             </div>
         </div>
-        <div id="contenedor_dinamico">
+        <div id="contenedor_contador">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Contador</h3>
             </div>
-            
+            <form id="texto">
+                <label for="texto">Texto:</label>
+                <input type="text" id="texto" name="texto" required>
+            </form>
+        </div>
+         <div id="contenedor_buscador">
+            <div id="tituloselect">
+                <h3 id="encabezado_estatus">Buscador</h3>
+            </div>
+            <form id="texto">
+                <label for="texto">Texto:</label>
+                <input type="text" id="texto" name="texto" required>
+            </form>
+        </div>
+        <div id="contenedor_acronimo">
+            <div id="tituloselect">
+                <h3 id="encabezado_estatus">Acrónimo</h3>
+            </div>
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
