--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -20,7 +20,7 @@
                 <button id="acronimo-btn" class="boton">Acronimo</button>
             </div>
         </div>
-        <div id="contenedor_contador">
+        <div id="contenedor_contador" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Contador</h3>
             </div>
@@ -29,7 +29,7 @@
                 <input type="text" id="texto" name="texto" required>
             </form>
         </div>
-         <div id="contenedor_buscador">
+         <div id="contenedor_buscador" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Buscador</h3>
             </div>
@@ -38,7 +38,7 @@
                 <input type="text" id="texto" name="texto" required>
             </form>
         </div>
-        <div id="contenedor_acronimo">
+        <div id="contenedor_acronimo" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Acrónimo</h3>
             </div>
