--- a/Statics/palabras.css
+++ b/Statics/palabras.css
@@ -3,8 +3,8 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
-    background-color: rgb(244, 251, 255);
-    color:rgb(77, 86, 100);
+    background-color: #202020;
+    color:rgb(208, 208, 208);
 }
 #contenedor_all{
     display: flex;
@@ -12,11 +12,21 @@ body{
     width: 100%;
     height: 1000px;
 }
+#contenedorbtn{
+    display: flexbox;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    background-color: rgb(133, 146, 170);
+}
+.divboton{
+    display: block;
+}
 .boton{
     display: block;
     width: 100px;
     background-color: rgba(0, 0, 0, 0.308);
-    color: rgba(255, 255, 255, 0.596);
+    color: rgba(195, 195, 195, 0.596);
     border: none;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -29,17 +39,7 @@ body{
     color: rgba(0, 0, 0, 0.589);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.336);
 }
-.divboton{
-    display: block;
-}
-#contenedorbtn{
-    display: flexbox;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    background-color: rgb(133, 146, 170);
-}
-#contenedor_dinamico{
+.contenedor_dinamico{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -56,8 +56,5 @@ body{
     justify-content: flex-start;
     text-align: center;
 }
-#encabezado_estatus{
-    margin-top: 5px;
-    margin-left: 5px;
-}
+
 
