--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -20,6 +20,9 @@
                 <button id="acronimo-btn" class="boton">Acronimo</button>
             </div>
         </div>
+
+
+
         <div id="contenedor_contador" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Contador</h3>
@@ -27,8 +30,11 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <button type="submit" id="btn_contar" class="boton">Contar</button>
             </form>
         </div>
+
+
          <div id="contenedor_buscador" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Buscador</h3>
@@ -36,8 +42,11 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <button type="submit" id="btn_buscar" class="boton">Buscar</button>
             </form>
         </div>
+
+
         <div id="contenedor_acronimo" class="contenedor_dinamico">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Acrónimo</h3>
@@ -45,8 +54,10 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <button type="submit" id="btn_acronimo" class="boton">Generar Acrónimo</button>
             </form>
         </div>
+
     </div>
     <script src="../Dynamics/js/cositas.js"></script>
 </body>
