--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -20,6 +20,7 @@
                 <button id="acronimo-btn" class="boton">Acronimo</button>
             </div>
         </div>
+
         <div id="contenedor_contador">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Contador</h3>
@@ -27,8 +28,10 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <input type="submit" value="Contar" id="contar-btn">
             </form>
         </div>
+
          <div id="contenedor_buscador">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Buscador</h3>
@@ -36,8 +39,10 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <input type="submit" value="Buscar" id="buscar-btn">
             </form>
         </div>
+
         <div id="contenedor_acronimo">
             <div id="tituloselect">
                 <h3 id="encabezado_estatus">Acrónimo</h3>
@@ -45,9 +50,10 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto" name="texto" required>
+                <input type="submit" value="Generar" id="acronimo-btn">
             </form>
         </div>
     </div>
-    
+    <script src="../Dynamics/js/cosotas.js"></script>
 </body>
 </html>
