--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -27,7 +27,7 @@
             </div>
             <form id="texto">
                 <label for="texto">Texto:</label>
-                <input type="text" id="texto" name="texto" required>
+                <input type="text" id="texto_contador" name="texto" required>
                 <input type="submit" value="Contar" id="contar-btn">
             </form>
         </div>
@@ -38,7 +38,7 @@
             </div>
             <form id="texto">
                 <label for="texto">Texto:</label>
-                <input type="text" id="texto" name="texto" required>
+                <input type="text" id="texto_buscador" name="texto" required>
                 <input type="submit" value="Buscar" id="buscar-btn">
             </form>
         </div>
@@ -49,7 +49,7 @@
             </div>
             <form id="texto">
                 <label for="texto">Texto:</label>
-                <input type="text" id="texto" name="texto" required>
+                <input type="text" id="texto_acronimo" name="texto" required>
                 <input type="submit" value="Generar" id="acronimo-btn">
             </form>
         </div>
