--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -30,6 +30,7 @@
                 <input type="text" id="texto_contador" name="texto" required>
                 <input type="submit" value="Contar" id="contar-btn">
             </form>
+            <p id="resultado"></p>
         </div>
 
          <div id="contenedor_buscador">
