Falta buscador y palabra más grande

--- a/Templates/palabras.html
+++ b/Templates/palabras.html
@@ -31,6 +31,9 @@
                 <input type="submit" value="Contar" id="contar-btn">
             </form>
             <p id="resultado"></p>
+            <p id="resultado2"></p>
+            <p id="resultado3"></p>
+            <p id="resultado4"></p>
         </div>
 
          <div id="contenedor_buscador">
@@ -42,6 +45,7 @@
                 <input type="text" id="texto_buscador" name="texto" required>
                 <input type="submit" value="Buscar" id="buscar-btn">
             </form>
+
         </div>
 
         <div id="contenedor_acronimo">
@@ -51,8 +55,9 @@
             <form id="texto">
                 <label for="texto">Texto:</label>
                 <input type="text" id="texto_acronimo" name="texto" required>
-                <input type="submit" value="Generar" id="acronimo-btn">
+                <input type="submit" value="Generar" id="acronimobtn">
             </form>
+            <p id="resultado5"></p>
         </div>
     </div>
     <script src="../Dynamics/js/cosotas.js"></script>
